; ModuleID = '/home/carl/AnghaBench/linux/arch/ia64/kernel/extr_topology.c_show_attributes.c'
source_filename = "/home/carl/AnghaBench/linux/arch/ia64/kernel/extr_topology.c_show_attributes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_info = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@cache_mattrib = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cache_info*, i8*)* @show_attributes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @show_attributes(%struct.cache_info* %0, i8* %1) #0 {
  %3 = alloca %struct.cache_info*, align 8
  %4 = alloca i8*, align 8
  store %struct.cache_info* %0, %struct.cache_info** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = load i8**, i8*** @cache_mattrib, align 8
  %7 = load %struct.cache_info*, %struct.cache_info** %3, align 8
  %8 = getelementptr inbounds %struct.cache_info, %struct.cache_info* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = getelementptr inbounds i8*, i8** %6, i64 %10
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @sprintf(i8* %5, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %12)
  ret i32 %13
}

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
